Subtask [GH-193] update of db migration v26 rename report reason to community guidelines, update affected code after renaming, init initializion of suspending account, CommunityGuidelineCategory table, [GH-188] db migration
