# Game-Hub/game-Hub-fe/src/app/services/models.ts
@@ -13,6 +13,8 @@ export type { BannerRequest } from './models/banner-request';
 export type { BanUserRequest } from './models/ban-user-request';
 export type { CardColorResponse } from './models/card-color-response';
 export type { CommunityFlagsResponse } from './models/community-flags-response';
+export type { CommunityGuidelineCategoryResponse } from './models/community-guideline-category-response';
+export type { CommunityGuidelinesResponse } from './models/community-guidelines-response';
 export type { DashboardReportResponse } from './models/dashboard-report-response';
 export type { DashboardResponse } from './models/dashboard-response';
 export type { ForgotPasswordRequest } from './models/forgot-password-request';
@@ -38,13 +40,13 @@ export type { PageResponseWishlistResponse } from './models/page-response-wishli
 export type { PlatformResponse } from './models/platform-response';
 export type { RecentUserResponse } from './models/recent-user-response';
 export type { RegistrationRequest } from './models/registration-request';
-export type { ReportReasonResponse } from './models/report-reason-response';
 export type { ReportRequest } from './models/report-request';
 export type { ReportStatusResponse } from './models/report-status-response';
 export type { RoleResponse } from './models/role-response';
 export type { StatusResponse } from './models/status-response';
 export type { StoreFlagsResponse } from './models/store-flags-response';
 export type { SubtitleResponse } from './models/subtitle-response';
+export type { SuspendAccountRequest } from './models/suspend-account-request';
 export type { SystemRequirements } from './models/system-requirements';
 export type { TokenExpiredResponse } from './models/token-expired-response';
 export type { UnitSizeResponse } from './models/unit-size-response';
