# Game-Hub/game-Hub-fe/src/app/services/models/community-guideline-category-response.ts
@@ -2,8 +2,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export interface ReportReasonResponse {
-  description?: string;
+export interface CommunityGuidelineCategoryResponse {
+  categoryName?: string;
   id?: number;
-  reason?: string;
 }
