# Game-Hub/game-Hub-fe/src/app/services/models/community-guidelines-response.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { CommunityGuidelineCategoryResponse } from '../models/community-guideline-category-response';
+export interface CommunityGuidelinesResponse {
+  category?: CommunityGuidelineCategoryResponse;
+  communityGuideline?: string;
+  description?: string;
+  id?: number;
+}
