# Game-Hub/game-Hub-fe/src/app/services/models/suspend-account-request.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface SuspendAccountRequest {
+  customMessage: string;
+  expiresAt: string;
+  suspendReason: number;
+}
